2009-Aug-13  yselkowitz

	* bin/cygport.in: Remove privbindir PATH handling, as everything has
	been converted to functions.
	* lib/pkg_info.cygpart (__list_deps): Adapt accordingly.

	* lib/src_postinst.cygpart (__src_postinst): Move __prepdoc up before
	__prep_symlinks so dodoc verbosity is follow-up to install and not in the
	middle of the postinstall steps.

	Source restructring.
	* bin/cygport.in: Functions moved from here...
	* lib/*.cygpart: ...to here.
	* lib/Makefile.am:
	* lib/*.cygclass: Cygclasses moved from here...
	* cygclass/*.cygclass: ...to here.
	* cygclass/Makefile.am: Added.
	* configure.ac (AC_OUTPUT): Added cygclass/Makefile.am.
	* Makefile.am (SUBDIRS): Added cygclass.
	* bin/Makefile.am (dist_privbin_SCRIPTS): Remove do*/new*, make_*.
	* bin/do*, bin/new*, bin/make_*: Command scripts moved from here...
	* lib/src_install.cygpart: ...into here as functions.
	* bin/Makefile.am (dist_privbin_SCRIPTS): Remove prep_*.sh.
	* bin/prep_*.sh: Postinstall scripts moved from here...
	* lib/src_postinst.cygpart: ...into here as functions.

	* configure.ac: Post-release version bump.

2009-Aug-10  yselkowitz

	* Tagged 0.9.9.

	Modify PyGTK package naming scheme.
	* lib/pygtk.cygclass: Chop 2.x version suffixes from PN to ORIG_PN.

	Add support for QConf based packages.
	* lib/Makefile.am:
	* lib/qt4-qconf.cygclass: Added.

	OCaml 3.11 update.
	* lib/ocaml.cygclass (LIBCAMLRUN): Change to libcamlrun_shared.

	Update for binutils-2.19.51.
	* bin/cygport.in: binutils now defaults to --enable-auto-import.

	GNUstep improvements.
	* lib/gnustep.cygclass: Require gnustep-config (gnustep-make).
	(__gnustep_dir): New internal function.
	(gnustep_pkg_apps, gnustep_pkg_frameworks): New functions.
	* data/mirrors: Define mirror://gnustep/.

2009-Aug-03  yselkowitz

	* lib/Makefile.am:
	* lib/gnustep.cygclass: NEW cygclass for GNUstep packages.

2009-Jul-28  yselkowitz

	* lib/gst-plugins0.10.cygclass: Fix gnonlin package name.