@@ -9,7 +9,14 @@ AM_INIT_AUTOMAKE([1.10 dist-bzip2 no-dist-gzip])
 
 AM_MAINTAINER_MODE
 
-AC_CHECK_PROGS(HELP2MAN, help2man, :)
+AC_PATH_PROG(HELP2MAN, help2man)
+AM_CONDITIONAL(HAVE_HELP2MAN, test "x$HELP2MAN" != "x")
+
+AC_PATH_PROG(GROFF, groff)
+AM_CONDITIONAL(HAVE_GROFF, test "x$GROFF" != "x")
+
+AC_PATH_PROG(ROBODOC, robodoc)
+AM_CONDITIONAL(HAVE_ROBODOC, test "x$ROBODOC" != "x")
 
 AC_CONFIG_FILES([
 Makefile
